<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/previewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fullImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:contentDescription="@string/image_message_preview"
        android:scaleType="fitCenter"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/downloadButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_download_image"
            android:src="@drawable/ic_download"
            app:tint="?attr/colorOnPrimary" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_close_image"
            android:src="@drawable/ic_close"
            app:tint="?attr/colorOnPrimary" />
    </LinearLayout>
</FrameLayout>
